--- a/sample-doc/config.toml
+++ b/sample-doc/config.toml
@@ -1,3 +1,6 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
+baseURL = ""
+languageCode = "ja"
 title = "My New Hugo Site"
+theme = "learn"
+publishDir = "../docs"
+relativeURLs = true
